# TopMat-MCP

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API_DOCUMENTATION.md  AUTH_API.md  CALPHAMESH_API_KEY_PLAN.md  CLAUDE.md  CLEANUP_SUMMARY.md  CONVERSATION_API.md  Cargo.toml  DATABASE_DESIGN.md  DEPLOYMENT.md  Dockerfile  Dockerfile.server  MCP_MACRO_DEMO.md  README.md  TopMat-LLM-API.md  agent.md  docker-compose.yml  test_download.py  test_e2e_debug.py  test_mcp.py  test_result_files.py
.claude/: settings.local.json
docs/: rig设计.md  stream.md  后端设计方案_v0.1.md  后端设计方案_v0.3.md
rig/: Cargo.toml  qwen_api.md  qwen_implementation_summary.md  qwen_integration_guide.md
rig/rig-core/: Cargo.toml  README.md  providers.md
rig/rig-core/rig-core-derive/: Cargo.toml
rig/rig-core/src/: audio_generation.rs  cli_chatbot.rs  extractor.rs  image_generation.rs  json_utils.rs  lib.rs  one_or_many.rs  streaming.rs  tool.rs  transcription.rs
rig/rig-core/src/agent/: builder.rs  completion.rs  mod.rs  tool.rs
rig/rig-core/src/agent/prompt_request/: mod.rs  streaming.rs
rig/rig-core/src/client/: audio_generation.rs  builder.rs  completion.rs  embeddings.rs  image_generation.rs  mod.rs  transcription.rs  verify.rs
rig/rig-core/src/completion/: message.rs  request.rs
rig/rig-core/src/embeddings/: builder.rs  distance.rs  embed.rs  embedding.rs  mod.rs  tool.rs
rig/rig-core/src/loaders/: file.rs  mod.rs  pdf.rs
rig/rig-core/src/loaders/epub/: loader.rs
rig/rig-core/src/pipeline/: agent_ops.rs  conditional.rs  mod.rs  op.rs  parallel.rs  try_op.rs
rig/rig-core/src/providers/: azure.rs  deepseek.rs  galadriel.rs  groq.rs  hyperbolic.rs  mira.rs  mod.rs  moonshot.rs  ollama.rs  perplexity.rs  qwen.rs  voyageai.rs
rig/rig-core/src/providers/anthropic/: client.rs  completion.rs  mod.rs  streaming.rs
rig/rig-core/src/providers/anthropic/decoders/: jsonl.rs  line.rs  mod.rs  sse.rs
rig/rig-core/src/providers/cohere/: client.rs  completion.rs  mod.rs  streaming.rs
rig/rig-core/src/providers/gemini/: client.rs  completion.rs  embedding.rs  mod.rs  streaming.rs  transcription.rs
rig/rig-core/src/providers/huggingface/: client.rs  completion.rs  mod.rs  streaming.rs
rig/rig-core/src/providers/mistral/: completion.rs  embedding.rs
rig/rig-core/src/providers/openai/: audio_generation.rs  client.rs  embedding.rs  image_generation.rs  mod.rs  transcription.rs
rig/rig-core/src/providers/openai/completion/: mod.rs  streaming.rs
rig/rig-core/src/providers/openai/responses_api/: mod.rs  streaming.rs
rig/rig-core/src/providers/openrouter/: client.rs  completion.rs  mod.rs  streaming.rs
rig/rig-core/src/providers/together/: client.rs  completion.rs  embedding.rs  mod.rs
rig/rig-core/src/providers/xai/: client.rs  completion.rs  mod.rs
rig/rig-core/src/telemetry/: mod.rs
rig/rig-core/src/tool/: mod.rs  server.rs
rig/rig-core/src/tools/: calphaMesh.rs  mod.rs  simulation.rs  think.rs
rig/rig-core/src/vector_store/: in_memory_store.rs  mod.rs  request.rs
rig/rig-core/tests/: openai_response_schema.rs
src/: docs.rs  main.rs
src/server/: chat.rs  mod.rs  model_router.rs  models.rs  request.rs  server.rs
src/server/agent/: a2a.rs  battery.rs  coating_optimization.rs  history.rs  mod.rs  ollama.rs  qwen.rs
src/server/agent/examples/: agent_with_ollama.rs  chain.rs  extractor.rs  gemini_agent.rs  ollama_streaming.rs  qwen_basic.rs  qwen_streaming.rs  qwen_tools.rs  rag_ollama.rs  sentiment_classifier.rs  simple_model.rs  together_streaming.rs  transcription.rs  vector_search_ollama.rs  voyageai_embeddings.rs  xai_streaming.rs
src/server/auth/: client.rs  mod.rs  utils.rs
src/server/database/: connection.rs  health.rs  mod.rs  models.rs
src/server/handlers/: auth.rs  chat.rs  conversations.rs  mcp.rs  mcp_docs.rs  mcp_stats.rs  mcp_stats_old.rs  messages.rs  mod.rs  models.rs  usage.rs
src/server/mcp/: mcp_agent.rs  mcp_server.rs  mod.rs  tool_macros.rs  tool_registry.rs
src/server/mcp/tools/: CALPHAMESH_TOOLS.md  MCP_REFACTORING_OPTIMIZATION.md  battery.rs  calphaMesh.rs  confirmation.rs  dify.rs  mod.rs  onnx_service.rs  phase_field.rs  simulation.rs  think.rs
src/server/mcp/tools/config_templates_al/: README.md  binary_pahse_diagram.json  boiling_point.json  http_api_payload参考.md  line_calculation.json  point_calculation.json  scheil_simulation.json  ternary_calculation.json  thermodynamic_properties.json  参数文档.md
src/server/middleware/: auth.rs  mcp_auth.rs  mcp_storage.rs  message_logger.rs  message_storage.rs  mod.rs
src/server/responses/: mod.rs
src/server/routing/: mod.rs
