[package]
name = "TopMat-LLM"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = { path = "./rig/rig-core" }
anyhow = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
bytes = "1.4"
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["server", "stream"] }
http-body-util = "0.1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }

# Database dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }