[workspace]
resolver = "3"
members = [
    "rig-core",
]

[profile.release]
lto = true
opt-level = "s"


[workspace.package]
edition = "2024"

[workspace.dependencies]
# Core dependencies for rig-core
anyhow = "1.0.98"
as-any = "0.3.2"
assert_fs = "1.1.3"
async-stream = "0.3.6"
axum = "0.8.4"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4"
epub = "2.1.4"
eventsource-stream = "0.2.3"
futures = "0.3.31"
futures-timer = "3.0.3"
glob = "0.3.2"
hyper-util = { version = "0.1.14", features = ["service", "server"] }
lopdf = "0.36.0"
mime_guess = "2.0.5"
opentelemetry = "0.30.0"
opentelemetry-otlp = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
ordered-float = "5.0.0"
pin-project-lite = "0.2.16"
quick-xml = "0.38.0"
rayon = "1.10.0"
reqwest = { version = "0.12.20", default-features = false }
rmcp = "0.8"
schemars = "1.0.4"
serde = "1.0.219"
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"
serenity = "0.12.4"
thiserror = "2.0.12"
tokio = "1.45.1"
tokio-test = "0.4.4"
tracing = "0.1.41"
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
url = "2.5"
wasm-bindgen-futures = "0.4.54"
worker = "0.6"

# Derive dependencies
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = "2.0.104"

[workspace.metadata.cargo-autoinherit]
# Skip cargo-autoinherit for these packages
exclude-members = ["rig-core", "rig-derive"]
