[package]
name = "rig-derive"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Internal crate that implements Rig derive macros."
repository = "https://github.com/0xPlaygrounds/rig"

[dependencies]
convert_case = "0.6"
deluxe = { version = "0.5", features = ["full"] }
indoc = "2.0"
proc-macro2 = { version = "1.0", features = ["proc-macro"] }
quote = "1.0"
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true

[dev-dependencies]
rig-core = { path = "../" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "simple"
path = "examples/rig_tool/simple.rs"

[[example]]
name = "with_description"
path = "examples/rig_tool/with_description.rs"

[[example]]
name = "full"
path = "examples/rig_tool/full.rs"

[[example]]
name = "async_tool"
path = "examples/rig_tool/async_tool.rs"
